# agentdna

./: .gitignore  README.md  pyproject.toml
agentdna/: __init__.py  config.json  core.py  handler.py  node_client.py  trust.py
examples/: host.py  remote.py
examples/JIRA/: .env.example  README.md  app.py  client.py  server.py
examples/github/: .env.sample  README.md  app.py  client.py  requirements.txt  server.py
examples/google_sheets/: .env.example  README.md  app.py  requirements.txt  server.py
examples/mulit_agent_system/host_agent_adk/host/tools/: quick_test.py
examples/mulit_agent_system/karley_agent_adk/: __main__.py  agent.py
examples/multi_agent_system/host_agent_adk/host/: agent.py
examples/multi_agent_system/kaitlynn_agent_langgraph/app/: agent.py  agent_executor.py
examples/multi_agent_system/karley_agent_adk/: agent_executor.py
examples/multi_agent_system/nate_agent_crewai/: agent_executor.py
examples/pickleball-multi-agent-system/: README.md
examples/pickleball-multi-agent-system/host_agent_adk/: pyproject.toml  webui_app.py
examples/pickleball-multi-agent-system/host_agent_adk/host/: __init__.py  config_loader.py  pickleball_tools.py  remote_agent_connection.py
examples/pickleball-multi-agent-system/host_agent_adk/host/tools/: calendar_adapter.py
examples/pickleball-multi-agent-system/host_agent_adk/host/tools/gcal/: __init__.py  calendar_tools.py  google_apis.py
examples/pickleball-multi-agent-system/kaitlynn_agent_langgraph/: pyproject.toml
examples/pickleball-multi-agent-system/karley_agent_adk/: pyproject.toml
examples/pickleball-multi-agent-system/nate_agent_crewai/: pyproject.toml
