[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdna"
version = "0.1.0"
description = "AgentDNA: Verifiable and Auditable AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Aparna Ullas"}
]

dependencies = [
  "requests>=2.0.0",
  "python-dotenv>=1.0.0",
  "rubix-py",
]

[tool.setuptools.package-data]
"agentdna" = ["token.txt"]

[project.urls]
Homepage = "https://github.com/rubixchain/agentdna"
Repository = "https://github.com/rubixchain/agentdna"