[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-dna"
version = "0.3.0"
description = "AgentDNA: Verifiable and Auditable AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Aparna Ullas"}
]

dependencies = [
  "requests>=2.0.0",
  "python-dotenv>=1.0.0",
  "rubix-py>=0.7.0",
  "py-multiformats-cid>=0.4.4",
]

[tool.setuptools.package-data]
"agentdna" = ["token.txt", "config.json"]

[project.urls]
Homepage = "https://github.com/rubixchain/agentdna"
Repository = "https://github.com/rubixchain/agentdna"
