[project]
name = "karley-scheduling-agent"
version = "0.1.0"
description = "Karley's scheduling agent for the A2A project."
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.5",
    "google-adk>=1.2.1",
    "python-dotenv",
    "uvicorn",
    "rubix-py>=0.6.0",
    "agent-dna",
] 

[tool.uv.sources]
agent-dna = { path = "../../rubix-agent-dna", editable = true }

