[project]
name = "nate-scheduling-agent"
version = "0.1.0"
description = "Nate's scheduling agent for the A2A project."
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.5",
    "crewai[tools]>=0.126.0",
    "pydantic",
    "python-dotenv",
    "uvicorn",
    "google-generativeai",
    "rubix-py>=0.6.0",
    "fastapi>=0.115.12",
    "agent-dna",
] 

[tool.uv.sources]
agent-dna = { path = "../../rubix-agent-dna", editable = true }
